# m3_graph

./: .gitignore  .woodpecker.yml  LICENSE  README.md  pyproject.toml  pytest.ini
src/m3_graph/: __init__.py  conn.py  graph.py  link.py  object.py  util.py
src/m3_graph/sql/: 0_table.sql  1_trigger.sql  2_function.sql
test/: conftest.py  test_crud.py  test_database.py  test_database_triggers.py  test_dbobject_basic.py  test_error_handling.py  test_graph.py  test_identity.py  test_indexes.py  test_relationship_state.py  test_relationships.py  test_state_management.py  test_state_sync.py  test_synchronization.py
tests/: conftest.py  test_complex_inheritance.py  test_core.py  test_database.py  test_graph.py  test_hierarchical_indexes.py  test_indexes.py  test_inheritance.py  test_input_date.py  test_relationships.py  test_state_sync.py  test_validation.py
