[project]
name = "m3_graph"
dynamic = ["version"]
requires-python = ">=3.10,<3.14"

authors = [
    { name = "Matus Lecky", email = "matus.lecky@gmail.com" }
]

description = "Lightweight PostgreSQL ORM with graph relationships"
license = { text = "Proprietary" }

dependencies = [
    "pydantic>=2.0",
    "psycopg[binary]>=3.1",
    "simplejson>=3.19"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-postgresql>=6.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {file = ["VERSION"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"m3_common" = ["**/*"]
